# Pneumonia-X-Ray-Analysis-

./: README.md  pyproject.toml  run.sh
frontend/: package-lock.json
frontend/src/: App.css  App.js  ModelImages.css  ModelImages.js  ModelVisuals.css  ModelVisuals.js  Statistics.css  Statistics.js
src/bwrp/: __init__.py  api.py  cli.py  data_loader.py  model.py  model_visualizer.py  statistics.py  train.py
